--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11.16"
+anyhow = "1.0.70"
+reqwest = { version = "0.11.16", features = ["json"] }
+serde = "1.0.159"
