--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.70"
 reqwest = { version = "0.11.16", features = ["json"] }
-serde = "1.0.159"
+schemars = "0.8.12"
+serde = { version = "1.0.159", features = ["derive"] }
