--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0.70"
 reqwest = { version = "0.11.16", features = ["json"] }
 schemars = "0.8.12"
 serde = { version = "1.0.159", features = ["derive"] }
+tokio = { version = "1.27.0", features = ["full"] }
