--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ anyhow = "1.0.70"
 reqwest = { version = "0.11.16", features = ["json"] }
 schemars = "0.8.12"
 serde = { version = "1.0.159", features = ["derive"] }
+serde_json = "1.0.96"
 tokio = { version = "1.27.0", features = ["full"] }
